--- a/index3D.html
+++ b/index3D.html
@@ -69,9 +69,10 @@
 
 		<div id="info">
 			<div class="github">
-				<a target="Version3D" href="index3D.html" title="Version 3D">Version 3D</a>,
-				<a target="githubDemo" href="index.html" title="Version 2D">2D</a> and <a target="githubSource"
-					href="https://github.com/patobeur/EggWar" title="Source Code on Github">Source</a> on Github !
+				<a target="githubDemo" href="https://patobeur.github.io/EggWar/" title="Version 2D">2D</a>,
+				<a target="Version3D" href="index3D.html" title="Version 3D">Version 3D</a>
+				and <a target="githubSource" href="https://github.com/patobeur/EggWar3D"
+					title="Source Code on Github">Source</a> on Github !
 				<svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16"
 					data-view-component="true" class="octicon">
 					<path fill-rule="evenodd"
