--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
 		<script></script>
 
 		<div id="info">
-			<div class="github">
-				<a target="githubDemo" href="https://patobeur.github.io/EggWar/" title="Version 2D">2D</a>,
-				<a target="Version3D" href="index3D.html" title="Version 3D">Version 3D</a>
-				and <a target="githubSource" href="https://github.com/patobeur/EggWar3D"
+			<div class="github"><a target="githubSource" href="https://github.com/patobeur/EggWar3D"
 					title="Source Code on Github">Source</a> on Github !
 				<svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16"
 					data-view-component="true" class="octicon">
